--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
-    "make": "electron-forge make",
+    "make": "run-s make:mac make:linux make:windows",
+    "make:mac": "electron-forge make --platform=darwin",
+    "make:linux": "electron-forge make --platform=linux --arch=ia32,x64",
+    "make:windows": "electron-forge make --platform=win32 --arch=ia32,x64",
     "publish": "electron-forge publish",
     "lint": "eslint --cache --color --ext .jsx,.js src"
   },
@@ -21,11 +24,12 @@
           "squirrel"
         ],
         "darwin": [
-          "zip"
+          "dmg"
         ],
         "linux": [
           "deb",
-          "rpm"
+          "rpm",
+          "zip"
         ]
       },
       "electronPackagerConfig": {
@@ -56,19 +60,19 @@
   },
   "devDependencies": {
     "babel-eslint": "8.2.2",
-    "babel-plugin-transform-async-to-generator": "6.24.1",
     "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-es2015-classes": "6.24.1",
-    "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
-    "babel-preset-stage-2": "6.24.1",
     "electron-forge": "5.1.1",
-    "electron-prebuilt-compile": "1.7.11",
+    "electron-installer-debian": "0.8.0",
+    "electron-installer-redhat": "0.5.0",
+    "electron-prebuilt-compile": "1.8.2",
+    "electron-wix-msi": "1.3.0",
     "eslint": "4.18.0",
     "eslint-config-airbnb": "16.1.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-react": "7.7.0"
+    "eslint-plugin-react": "7.7.0",
+    "npm-run-all": "4.1.2"
   }
 }
