--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
   "name": "learning-electron",
-  "productName": "learning-electron",
+  "productName": "Learning Electron",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "App to learn Electron JS",
   "main": "src/index.js",
+  "private": true,
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "run-s make:mac make:linux make:windows",
     "make:mac": "electron-forge make --platform=darwin",
     "make:linux": "electron-forge make --platform=linux --arch=ia32,x64",
-    "make:windows": "electron-forge make --platform=win32 --arch=ia32,x64",
+    "make:windows": "electron-forge make --target=wix",
     "publish": "electron-forge publish",
     "lint": "eslint --cache --color --ext .jsx,.js src"
   },
   "keywords": [],
-  "author": "dougl",
+  "author": "Douglas Nassif Roma Junior",
   "license": "MIT",
   "config": {
     "forge": {
       "make_targets": {
         "win32": [
-          "squirrel"
+          "wix"
         ],
         "darwin": [
           "dmg"
@@ -33,10 +34,22 @@
         ]
       },
       "electronPackagerConfig": {
-        "packageManager": "yarn"
+        "packageManager": "yarn",
+        "asar": true,
+        "arch": "all"
       },
       "electronWinstallerConfig": {
-        "name": "learning_electron"
+        "name": "Learning Electron"
+      },
+      "electronWixMSIConfig": {
+        "wixTemplate": "./wix-template.wxs",
+        "name": "Learning Electron",
+        "appUserModelId": "douglas.learning-electron",
+        "manufacturer": "Learning Electron",
+        "ui": {
+          "enabled": true,
+          "chooseDirectory": true
+        }
       },
       "electronInstallerDebian": {},
       "electronInstallerRedhat": {},
@@ -45,7 +58,7 @@
         "name": ""
       },
       "windowsStoreConfig": {
-        "packageName": "",
+        "packageName": "douglas.learningelectron",
         "name": "learningelectron"
       }
     }
@@ -64,8 +77,6 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "electron-forge": "5.1.1",
-    "electron-installer-debian": "0.8.0",
-    "electron-installer-redhat": "0.5.0",
     "electron-prebuilt-compile": "1.8.2",
     "electron-wix-msi": "1.3.0",
     "eslint": "4.18.0",
